Fixed text card alignement

--- a/src/Components/UI/Card/Card.module.css
+++ b/src/Components/UI/Card/Card.module.css
@@ -20,10 +20,11 @@
 
 .cardInfo {
   padding: 1rem;
-  text-align: center;
+  text-align: left;
 }
 
 .cardInfo h3 {
+  text-align: center;
   margin-top: 0;
   font-size: 24px;
   font-weight: bold;
